...
                android:layout_margin="@dimen/spacing_medium"
                android:text="Admin Login"
                android:textColor="@color/text_dark_color"
                android:textSize="@dimen/text_size_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userID"
                style="@style/ExtendedTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:hint="@string/email"
...
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                style="@style/ExtendedButtonRound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
...
