<resources>
    <string name="app_name">BlueFox</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_user">Create new user</string>
    <string name="email">Email</string>
    <string name="create_user">Create User</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="user_list">User List</string>
    <string name="address">Address</string>
    <string name="add_user">Add User</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_items">No items</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
</resources>